--- a/src/ctcubemask/Makefile.am
+++ b/src/ctcubemask/Makefile.am
@@ -1,7 +1,7 @@
 #############################################################################
 # Makefile.am for ctcubemask tool                                           #
 # ------------------------------------------------------------------------- #
-# Copyright (C) 2016 Juergen Knoedlseder                                    #
+# Copyright (C) 2016-2017 Juergen Knoedlseder                               #
 # ------------------------------------------------------------------------- #
 #                                                                           #
 #  This program is free software: you can redistribute it and/or modify     #
@@ -27,6 +27,9 @@ bin_PROGRAMS = ctcubemask
 
 # Sources
 sources = ctcubemask.cpp ctcubemask.hpp
+
+# Headers
+pkginclude_HEADERS = ctcubemask.hpp
 
 # Libtool library (only needed for python bindings)
 noinst_LTLIBRARIES = libctcubemask.la
