--- a/src/ctexpcube/Makefile.am
+++ b/src/ctexpcube/Makefile.am
@@ -1,7 +1,7 @@
 #############################################################################
 # Makefile.am for ctexpcube tool                                            #
 # ------------------------------------------------------------------------- #
-# Copyright (C) 2016 Juergen Knoedlseder                                    #
+# Copyright (C) 2016-2017 Juergen Knoedlseder                               #
 # ------------------------------------------------------------------------- #
 #                                                                           #
 #  This program is free software: you can redistribute it and/or modify     #
@@ -27,6 +27,9 @@ bin_PROGRAMS = ctexpcube
 
 # Sources
 sources = ctexpcube.cpp ctexpcube.hpp
+
+# Headers
+pkginclude_HEADERS = ctexpcube.hpp
 
 # Libtool library
 noinst_LTLIBRARIES = libctexpcube.la
