--- a/src/ctlike/Makefile.am
+++ b/src/ctlike/Makefile.am
@@ -1,7 +1,7 @@
 #############################################################################
 # Makefile.am for ctlike tool                                               #
 # ------------------------------------------------------------------------- #
-# Copyright (C) 2016 Juergen Knoedlseder                                    #
+# Copyright (C) 2016-2017 Juergen Knoedlseder                               #
 # ------------------------------------------------------------------------- #
 #                                                                           #
 #  This program is free software: you can redistribute it and/or modify     #
@@ -27,6 +27,9 @@ bin_PROGRAMS = ctlike
 
 # Sources
 sources = ctlike.cpp ctlike.hpp
+
+# Headers
+pkginclude_HEADERS = ctlike.hpp
 
 # Libtool library
 noinst_LTLIBRARIES = libctlike.la
