--- a/src/ctselect/Makefile.am
+++ b/src/ctselect/Makefile.am
@@ -1,7 +1,7 @@
 #############################################################################
 # Makefile.am for ctselect tool                                             #
 # ------------------------------------------------------------------------- #
-# Copyright (C) 2016 Juergen Knoedlseder                                    #
+# Copyright (C) 2016-2017 Juergen Knoedlseder                               #
 # ------------------------------------------------------------------------- #
 #                                                                           #
 #  This program is free software: you can redistribute it and/or modify     #
@@ -27,6 +27,9 @@ bin_PROGRAMS = ctselect
 
 # Sources
 sources = ctselect.cpp ctselect.hpp
+
+# Headers
+pkginclude_HEADERS = ctselect.hpp
 
 # Libtool library (only needed for python bindings)
 noinst_LTLIBRARIES = libctselect.la
