--- a/src/ctulimit/Makefile.am
+++ b/src/ctulimit/Makefile.am
@@ -1,7 +1,7 @@
 #############################################################################
 # Makefile.am for ctulimit tool                                             #
 # ------------------------------------------------------------------------- #
-# Copyright (C) 2016 Juergen Knoedlseder                                    #
+# Copyright (C) 2016-2017 Juergen Knoedlseder                               #
 # ------------------------------------------------------------------------- #
 #                                                                           #
 #  This program is free software: you can redistribute it and/or modify     #
@@ -27,6 +27,9 @@ bin_PROGRAMS = ctulimit
 
 # Sources
 sources = ctulimit.cpp ctulimit.hpp
+
+# Headers
+pkginclude_HEADERS = ctulimit.hpp
 
 # Libtool library
 noinst_LTLIBRARIES = libctulimit.la
