Reduce code duplications

--- a/test/testing.py.in
+++ b/test/testing.py.in
@@ -164,3 +164,22 @@ class test(gammalib.GPythonTestSuite):
 
         # Return observation container
         return obs
+
+    # Check
+    def _check_help(self, tool):
+        """
+        """
+        # Setup tool --help option
+        cmd = tool+' --help'
+
+        # Check if execution was successful in case that the CTOOLS
+        # environment variable was set or failed otherwise
+        if 'CTOOLS' in os.environ:
+            self.test_value(self._execute(cmd), 0,
+                 'Check successful execution with --help option')
+        else:
+            self.test_assert(self._execute(cmd) != 0,
+                 'Check execution failure with --help option')
+
+        # Return
+        return
