--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -31,6 +31,7 @@ __all__ = [
     "csmodelinfo",
     "csmodelmerge",
     "csmodelselect",
+    "csmodelsois",
     "csobs2caldb",
     "csobsdef",
     "csobsinfo",
@@ -66,6 +67,7 @@ from cscripts.cslightcrv    import cslightcrv
 from cscripts.csmodelinfo   import csmodelinfo
 from cscripts.csmodelmerge  import csmodelmerge
 from cscripts.csmodelselect import csmodelselect
+from cscripts.csmodelsois   import csmodelsois
 from cscripts.csobs2caldb   import csobs2caldb
 from cscripts.csobsdef      import csobsdef
 from cscripts.csobsinfo     import csobsinfo
