running version, does nothing, methods not tested yet

--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -33,6 +33,7 @@ pythonscripts = $(top_builddir)/cscripts/__init__.py \
                 $(srcdir)/csobsinfo.py \
                 $(srcdir)/csobsselect.py \
                 $(srcdir)/csphasecrv.py \
+		$(srcdir)/csphagen.py \
                 $(srcdir)/cspull.py \
                 $(srcdir)/csresmap.py \
                 $(srcdir)/csroot2caldb.py  \
@@ -64,6 +65,7 @@ parfiles = $(srcdir)/cscaldb.par \
            $(srcdir)/csobsdef.par \
            $(srcdir)/csobsinfo.par \
            $(srcdir)/csobsselect.par \
+	   $(srcdir)/csphagen.par \
            $(srcdir)/csphasecrv.par \
            $(srcdir)/cspull.par \
            $(srcdir)/csresmap.par \
@@ -93,6 +95,7 @@ linkscripts = cscaldb \
               csobsdef \
               csobsinfo \
               csobsselect \
+	      csphagen \
               csphasecrv \
               cspull \
               csresmap \
