--- a/Makefile.am
+++ b/Makefile.am
@@ -31,6 +31,12 @@ pkgconfigdir = $(libdir)/pkgconfig
 # Files to install in Pkgconfig directory
 pkgconfig_DATA = ctools.pc
 
+# Conda activate directory
+condaactivatedir = $(sysconfdir)/conda/activate.d
+condaactivate_DATA = dev/ctools-activate.sh
+condadeactivatedir = $(sysconfdir)/conda/deactivate.d
+condadeactivate_DATA = dev/ctools-deactivate.sh
+
 # Manual pages to install
 man_MANS = 
 
