--- a/ctools.pc.in
+++ b/ctools.pc.in
@@ -6,7 +6,7 @@ includedir=${prefix}/include
 Name: ctools
 Description: CTA science analysis tools
 URL: http://cta.irap.omp.eu/ctools
-Version: 1.4.3
+Version: @VERSION@
 Requires: 
 Requires.private: gammalib >= 1.4.3
 Conflicts: 
