--- a/ctools.pc.in
+++ b/ctools.pc.in
@@ -8,7 +8,7 @@ Description: CTA science analysis tools
 URL: http://cta.irap.omp.eu/ctools
 Version: @VERSION@
 Requires: 
-Requires.private: gammalib >= 1.4.3
+Requires.private: gammalib == 1.4.3
 Conflicts: 
 Cflags: -I${includedir}/ctools @OPENMP_CXXFLAGS@
 Libs: -L${libdir} -lctools
