--- a/dev/conda.recipe/meta.yaml.in
+++ b/dev/conda.recipe/meta.yaml.in
@@ -18,10 +18,10 @@ requirements:
     - python  
     - setuptools
     - swig
-    - gammalib >=1.4.3
+    - gammalib ==1.4.3
   run:
     - python
-    - gammalib >=1.4.3
+    - gammalib ==1.4.3
 
 about:
   home: http://cta.irap.omp.eu/ctools
