Add Jupyter notebook for the connection of observations with models

--- a/models/Makefile.am
+++ b/models/Makefile.am
@@ -1,7 +1,7 @@
 #############################################################################
 # Makefile for models                                                       #
 # ------------------------------------------------------------------------- #
-# Copyright (C) 2016 Juergen Knoedlseder                                    #
+# Copyright (C) 2016-2018 Juergen Knoedlseder                               #
 # ------------------------------------------------------------------------- #
 #                                                                           #
 #  This program is free software: you can redistribute it and/or modify     #
@@ -22,6 +22,7 @@
 # Models to install
 models = crab.xml \
          crab_beyond.xml \
+         crab_2bkg.xml \
          crab_poly.xml \
          crab_profile.xml \
          disk.xml \
