Make sure that old library path is kept on Mac OS X (#2420)

--- a/src/ctools-setup.in
+++ b/src/ctools-setup.in
@@ -1,5 +1,4 @@
-#! /bin/sh
-#    Filename: ctools-setup(.in)
+#  Filename:   ctools-setup(.in)
 # Description: Writes an initialization script for ctools software
 #              which is custom fit to the user and the particular
 #              software installation. Note that this script is
@@ -98,12 +97,10 @@ fi
 #
 # Set LD_LIBRARY_PATH
 # ===================
-if [ "x$LD_LIBRARY_PATH" = x ]; then
-  LD_LIBRARY_PATH="$ctools_lib"
+if [ -z "${LD_LIBRARY_PATH}" ]; then
+  LD_LIBRARY_PATH=$ctools_lib
 else
-  LD_LIBRARY_PATH=`echo ":$LD_LIBRARY_PATH:" | \
-    sed "s%:$ctools_lib:%:%g" | sed "s%::*$%%"`
-  LD_LIBRARY_PATH="$ctools_lib$LD_LIBRARY_PATH"
+  LD_LIBRARY_PATH=$ctools_lib:$LD_LIBRARY_PATH
 fi
 
 #
@@ -111,20 +108,17 @@ fi
 # =================================
 case $uname_system in
   Darwin*)
-    if [ "x$DYLD_LIBRARY_PATH" = x ]; then
-         DYLD_LIBRARY_PATH="$ctools_lib"
+    if [ -z "${DYLD_LIBRARY_PATH}" ]; then
+      DYLD_LIBRARY_PATH=$ctools_lib
     else
-      DYLD_LIBRARY_PATH=`echo ":$DYLD_LIBRARY_PATH:" | \
-        sed "s%:$ctools_lib:%:%g" | sed "s%::*$%%"`
-      DYLD_LIBRARY_PATH="$ctools_lib$DYLD_LIBRARY_PATH"
+      DYLD_LIBRARY_PATH=$ctools_lib:$DYLD_LIBRARY_PATH
     fi
     ;;
   CYGWIN*)
-    if [ "x$PATH" = x ]; then
-      PATH="$ctools_lib"
+    if [ -z "${PATH}" ]; then
+      PATH=$ctools_lib
     else
-      PATH=`echo ":$PATH:" | sed "s%:$ctools_lib:%:%g" | sed "s%::*$%%"`
-      PATH="$ctools_lib$PATH"
+      PATH=$ctools_lib:$PATH
     fi
     ;;
 esac
@@ -132,41 +126,28 @@ esac
 #
 # Set PYTHONPATH
 # ==============
-if [ "x$PYTHONPATH" = x ]; then
-  PYTHONPATH="$python_dir"
+if [ -z "${PYTHONPATH}" ]; then
+  PYTHONPATH=$python_dir:$python_exec_dir
 else
-  PYTHONPATH=`echo ":$PYTHONPATH:" | \
-    sed "s%:$python_dir:%:%g" | sed "s%::*$%%"`
-  PYTHONPATH="$python_dir$PYTHONPATH"
-fi
-if [ "x$PYTHONPATH" = x ]; then
-  PYTHONPATH="$python_exec_dir"
-else
-  PYTHONPATH=`echo ":$PYTHONPATH:" | \
-    sed "s%:$python_exec_dir:%:%g" | sed "s%::*$%%"`
-  PYTHONPATH="$python_exec_dir$PYTHONPATH"
+  PYTHONPATH=$python_dir:$python_exec_dir:$PYTHONPATH
 fi
 
 #
 # Set PKG_CONFIG_PATH
 # ===================
-if [ "x$PKG_CONFIG_PATH" = x ]; then
-  PKG_CONFIG_PATH="$pkgconfig_dir"
+if [ -z "${PKG_CONFIG_PATH}" ]; then
+  PKG_CONFIG_PATH=$pkgconfig_dir
 else
-  PKG_CONFIG_PATH=`echo ":$PKG_CONFIG_PATH:" | \
-    sed "s%:$pkgconfig_dir:%:%g" | sed "s%::*$%%"`
-  PKG_CONFIG_PATH="$pkgconfig_dir$PKG_CONFIG_PATH"
+  PKG_CONFIG_PATH=$pkgconfig_dir:$PKG_CONFIG_PATH
 fi
 
 #
 # Set PATH
 # ========
-if [ "x$PATH" = x ]; then
-  PATH="$ctools_bin"
+if [ -z "${PATH}" ]; then
+  PATH=$ctools_bin
 else
-  PATH=`echo ":$PATH:" | \
-    sed "s%:$ctools_bin:%:%g" | sed "s%::*$%%"`
-  PATH="$ctools_bin$PATH"
+  PATH=$ctools_bin:$PATH
 fi
 
 #
@@ -188,8 +169,8 @@ fi
 #
 # Set CALDB (if not yet set)
 # ==========================
-if [ "x$CALDB" = x ]; then
-  CALDB="$caldb_dir"
+if [ -z "${CALDB}" ]; then
+  CALDB=$caldb_dir
 fi
 
 #
