--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -53,7 +53,8 @@ __all__ = [
     "obsutils",
     "modutils",
     "calutils",
-    "ioutils"
+    "ioutils",
+    "mputils"
 ]
 if cur_version > req_version:
     __all__.extend(["csfindobs",
