--- a/pyext/Makefile.am
+++ b/pyext/Makefile.am
@@ -64,8 +64,8 @@ testscripts = ctools/tests/__init__.py \
 
 # Test data to be distributed in $(pyexecdir)/ctools/tests/data
 testdata = $(top_srcdir)/test/data/crab.xml \
-           $(top_srcdir)/test/data/crab_events.fits.gz \
-           $(top_srcdir)/test/data/crab_cntmap.fits.gz \
+           $(top_srcdir)/test/data/crab_events.fits \
+           $(top_srcdir)/test/data/crab_cntmap.fits \
            $(top_srcdir)/test/data/phased_events.fits.gz \
            $(top_srcdir)/test/data/invalid_event_list.fits.gz \
            $(top_srcdir)/test/data/model_temporal_phasecurve.xml \
