Defer import of ROOT module in csroot2caldb to run method (#2652)

--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -80,6 +80,7 @@ from cscripts.csphasecrv    import csphasecrv
 from cscripts.cspull        import cspull
 from cscripts.csresmap      import csresmap
 from cscripts.csresspec     import csresspec
+from cscripts.csroot2caldb  import csroot2caldb
 from cscripts.cssens        import cssens
 from cscripts.csspec        import csspec
 from cscripts.cssrcdetect   import cssrcdetect
